<resources>
    <string name="app_name">OpenWeather</string>
    
    <!-- Unit Type -->
    <string name="unit_type_celsius">C°</string>
    <string name="unit_type_fahrenheit">F°</string> //FAHRENHEIT

    <!-- Error message -->
    <string name="error_message_city_validate">Please input city</string>
    <string name="error_message_city_not_found">You city not found</string>

    <!-- Search Screen -->
    <string name="hint_search">Input you city</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_humidity">Humidity</string>

    <!-- Whole day item -->
    <string name="item_temp">Temp : %s</string>
    <string name="something_wrong">Something when wrong</string>
</resources>